--- a/IocMapper.Microsoft.DependencyInjection/IocMapper.Microsoft.DependencyInjection.csproj
+++ b/IocMapper.Microsoft.DependencyInjection/IocMapper.Microsoft.DependencyInjection.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IocMapper" Version="1.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
