Complete testing for microsoft ioc

--- a/IocMapper.Microsoft.DependencyInjection.UnitTests/IocMapper.Microsoft.DependencyInjection.UnitTests.csproj
+++ b/IocMapper.Microsoft.DependencyInjection.UnitTests/IocMapper.Microsoft.DependencyInjection.UnitTests.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\IocMapper.Microsoft.DependencyInjection.UnitTests.ExternalLibrary\IocMapper.Microsoft.DependencyInjection.UnitTests.ExternalLibrary.csproj" />
     <ProjectReference Include="..\IocMapper.Microsoft.DependencyInjection\IocMapper.Microsoft.DependencyInjection.csproj" />
   </ItemGroup>
 
