--- a/IocMapper.Microsoft.DependencyInjection/IocMapper.Microsoft.DependencyInjection.csproj
+++ b/IocMapper.Microsoft.DependencyInjection/IocMapper.Microsoft.DependencyInjection.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <Nullable>enable</Nullable>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net461</TargetFrameworks>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
