--- a/IocMapper.Microsoft.DependencyInjection/IocMapper.Microsoft.DependencyInjection.csproj
+++ b/IocMapper.Microsoft.DependencyInjection/IocMapper.Microsoft.DependencyInjection.csproj
@@ -3,6 +3,18 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1;net461</TargetFrameworks>
     <Nullable>disable</Nullable>
+	<Version>1.0.1</Version>
+    <Title>IocMapper.Microsoft.DependencyInjection</Title>
+    <Authors>Simplelink</Authors>
+    <Company>Simplelink</Company>
+    <Copyright>2022</Copyright>
+    <Description>Use Microsoft Dependency Injection to simplify mapping IOC dependencies.</Description>
+    <RepositoryUrl>https://github.com/jwallace1983/IocMapper</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageReleaseNotes>Initial version</PackageReleaseNotes>
+    <PackageProjectUrl>https://github.com/jwallace1983/IocMapper</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
