--- a/Samples.Microsoft.DependencyInjection.WebApiNet6/Samples.Microsoft.DependencyInjection.WebApiNet6.csproj
+++ b/Samples.Microsoft.DependencyInjection.WebApiNet6/Samples.Microsoft.DependencyInjection.WebApiNet6.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\IocMapper.Microsoft.DependencyInjection\IocMapper.Microsoft.DependencyInjection.csproj" />
-    <ProjectReference Include="..\IocMapper\IocMapper.csproj" />
+    <PackageReference Include="IocMapper.Microsoft.DependencyInjection" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
