--- a/IocMapper.UnitTests/IocMapper.UnitTests.csproj
+++ b/IocMapper.UnitTests/IocMapper.UnitTests.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>disable</Nullable>
+    <ImplicitUsings>disable</ImplicitUsings>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
